# userver

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mapping.json  .piglet-meta.json  AUTHORS  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  Makefile.common  Makefile.local  Makefile.macos  Makefile.variables  README.md  README.yamake.md  SECURITY.md  THIRD_PARTY.md  bench.sh  conandata.yml  conanfile.py  db_settings.yaml  docker-compose.yml  doxygen.conf  dynamic_config_fallbacks.yaml  feat all: add AUTHORS  generator.py  linters.yaml  plots.py  pyproject.toml  pytest.ini  runit.sh  services.yaml
chaotic/: CMakeLists.txt  library.yaml
chaotic/chaotic/: error.py  main.py
chaotic/golden_tests/: CMakeLists.txt
chaotic/integration_tests/: CMakeLists.txt
chaotic/mypy/: conftest.py
chaotic/tests/: conftest.py  test_main.py
clickhouse/: CMakeLists.txt  README.md  library.yaml
clickhouse/functional_tests/: CMakeLists.txt
core/: CMakeLists.txt  README.md  build_config.hpp.in  library.yaml
core/benchmarks/: main.cpp
core/functional_tests/: CMakeLists.txt
core/glibc_include_fixes/: errno.h  pthread.h
core/libc_include_fixes/: pthread.h
core/src/: core_benchmark.cpp  testing_test.cpp
core/tests/: dynamic_config_fallback.json
core/utest/: CMakeLists.txt
coroutine_debug/: CMakeLists.txt  library.yaml
examples/driver_authorizer/: CMakeLists.txt
grpc/: CMakeLists.txt  README.md  library.yaml  requirements.txt
grpc/benchmarks/: base.cpp  format_log_message.cpp  trim_secrets.cpp  ya.make
grpc/functional_tests/: CMakeLists.txt
grpc/handlers/: CMakeLists.txt
grpc/tests/: async_test.cpp  baggage_test.cpp  base_test.cpp  cancel_test.cpp  channels_test.cpp  client_cancel_test.cpp  client_factory_test.cpp  client_qos_test.cpp  congestion_control_test.cpp  deadline_metrics_test.cpp  deadline_test.cpp  error_test.cpp  field_mask_bin_middleware_test.cpp  field_mask_test.cpp  generic_client_test.cpp  generic_server_test.cpp  logging_test.cpp  middlewares_test.cpp  protobuf_collector_test.cpp  protobuf_visit_test.cpp  secret_fields_test.cpp  serialization_test.cpp  server_middlewares_error_test.cpp  service_config_test.cpp  statistics_test.cpp  stream_test.cpp  tracing_test.cpp  unimplemented_test.cpp  wait_any_test.cpp
kafka/: CMakeLists.txt  README.md  library.yaml
kafka/functional_tests/: CMakeLists.txt
kafka/tests/: CMakeLists.txt  configuration_kafkatest.cpp  configuration_test.cpp  consumer_kafkatest.cpp  consumer_test.cpp  producer_kafkatest.cpp  producer_test.cpp  test_utils.cpp  test_utils.hpp  utils_kafkatest.cpp  utils_kafkatest.hpp
kafka/utest/: CMakeLists.txt
mongo/: CMakeLists.txt  README.md  library.yaml
mongo/functional_tests/: CMakeLists.txt  pytest.ini
mongo/tests/: dynamic_config_fallback.json
mysql/: CMakeLists.txt  README.md  TODO.md  library.yaml
mysql/benchmarks/: insert.cpp  select.cpp
mysql/functional_tests/: CMakeLists.txt
mysql/mysqltests/: buggy_libmariadb.cpp  dates.cpp  mapped_result_set.cpp  showcase.cpp  statement_result_set.cpp  string_view.cpp  supported_types.cpp
mysql/tests/: binding.cpp  buggy_libmariadb.cpp  cluster.cpp  cursor.cpp  dates.cpp  decimal.cpp  execution_result.cpp  mapped_result_set.cpp  numerics.cpp  prepared_statements.cpp  showcase.cpp  statement_result_set.cpp  string_view.cpp  supported_types.cpp  transaction.cpp  uuid.cpp
otlp/: CMakeLists.txt
otlp/tests/: service_test.cpp
postgresql/: CMakeLists.txt  README.md  library.yaml
postgresql/functional_tests/: CMakeLists.txt  service.yaml
postgresql/libpq-version-generator/: CMakeLists.txt  main.cpp
postgresql/pq-extra/: CMakeLists.txt  check_main.c  pq_extra_defs.h  pq_pipeline_funcs.i  pq_portal_funcs.c  pq_portal_funcs.h  pq_workaround.c  pq_workaround.h
postgresql/schemas/: db-1.sql  db_1.sql
postgresql/tests/: dynamic_config_fallback.json
rabbitmq/: CMakeLists.txt  README.md  library.yaml
rabbitmq/functional_tests/: CMakeLists.txt
redis/: CMakeLists.txt  README.md  library.yaml
redis/benchmark/: redis_benchmark.cpp  redis_fixture.cpp  redis_fixture.hpp  ya.make
redis/functional_tests/: CMakeLists.txt
redis/testing/: CMakeLists.txt
redis/tests/: dynamic_config_fallback.json
rocks/: CMakeLists.txt  library.yaml
samples/: CMakeLists.txt  README.md  config_service.cpp  conftest.py  flatbuf_service.cpp  hello_service.cpp  postgres_service.cpp  production_service.cpp  pytest.ini  redis_service.cpp  run_samples.py
samples/chaotic_service/: CMakeLists.txt  main.cpp  static_config.yaml
samples/clickhouse_service/: CMakeLists.txt  clickhouse_service.cpp  dynamic_config_fallback.json  static_config.yaml
samples/config_service/: CMakeLists.txt  config_service.cpp  dynamic_config_fallback.json  static_config.yaml
samples/digest_auth_service/: CMakeLists.txt  auth_digest.cpp  auth_digest.hpp  digest_auth_service.cpp  dynamic_config_fallback.json  main.cpp  secret_data.json  static_config.yaml  user_info.hpp
samples/etcd_service/: CMakeList.txt  CMakeLists.txt  dynamic_config_fallback.json  etcd_service.cpp  static_config.yaml
samples/flatbuf_service/: CMakeLists.txt  dynamic_config.json  flatbuf_service.cpp  flatbuffer_schema.fbs  flatbuffer_schema_generated.h  static_config.yaml
samples/grpc-generic-proxy/: CMakeLists.txt  config_vars.yaml  main.cpp  static_config.yaml
samples/grpc_middleware_service/: CMakeLists.txt  static_config.yaml  ya.make
samples/grpc_service/: CMakeLists.txt  dynamic_config_fallback.json  grpc_service.cpp  main.cpp  static_config.yaml
samples/hello_service/: CMakeLists.txt  hello_service.cpp  main.cpp  static_config.yaml  upy.py
samples/json2yaml/: main.cpp  (+5 more)
src/: CMakeLists.txt  build_config.hpp.in  hello.cpp  hello_test.cpp  main.cpp  main_test.cpp  main_test.hpp  testing_test.cpp
telegram/: CMakeLists.txt  library.yaml
uboost_coro/: CMakeLists.txt  README.md
universal/: CMakeLists.txt  README.md  library.yaml
ydb/: CMakeLists.txt  library.yaml  ya.make.ext
yt/: CMakeLists.txt  library.yaml
(+7795 files in other folders)
